--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -63,7 +63,7 @@
               <div class="product-list__item">
                 <figure class="product-list__img">
                   <a href="single_course.html">
-                    <img src="/assets/img/product_list/product_img-01.jpg" alt="">
+                    <img src="/assets/img/details.jpg" alt="">
                   </a>
                 </figure>
                 <div class="product-list__content">
@@ -521,8 +521,7 @@
                   <span>Geometry Course</span>
                 </li>
               </ul>
-              <a routerLink="/booksdetails">
-                <button class="price-btn" type="button">Select plan for Rent </button></a>
+             <a routerLink="/booksdetails"> <button class="price-btn" type="button">Select plan for Rent </button></a>
             </div>
           </div>
           <div class="col-sm-4 col-md-4 col-lg-4 text-center">
@@ -554,8 +553,7 @@
                   <span>Geometry Course</span>
                 </li>
               </ul>
-              <a routerLink="/booksdetails">
-              <button class="price-btn" type="button">Select plan for Buy</button></a>
+              <a routerLink="/booksdetails">  <button class="price-btn" type="button">Select plan for Buy</button></a>
             </div>
           </div>
           <div class="col-sm-4 col-md-4 col-lg-4 text-center">
