--- a/src/app/forgot/forgot.component.html
+++ b/src/app/forgot/forgot.component.html
@@ -1,4 +1,4 @@
-<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">-->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <div class="form-gap"></div>
 <div class="container">
  <div class="row">
@@ -10,9 +10,9 @@
                  <h2 class="text-center">Forgot Password?</h2>
                  <p>You can reset your password here.</p>
                  <div class="panel-body">
-
+   
                    <form id="register-form" role="form" autocomplete="off" class="form" method="post">
-
+   
                      <div class="form-group">
                        <div class="input-group">
                          <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
@@ -22,10 +22,10 @@
                      <div class="form-group">
                       <a routerLink="/password"> <input name="recover-submit" class="btn btn-lg btn-primary btn-block" value="Reset Password" type="submit"></a>
                      </div>
-
-                     <input type="hidden" class="hide" name="token" id="token" value="">
+                     
+                     <input type="hidden" class="hide" name="token" id="token" value=""> 
                    </form>
-
+   
                  </div>
                </div>
              </div>
