--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,6 +1,6 @@
-<div class="container">
+ <div class="container">
 	<div class="row">
-
+		
 	</div>
 </div>
 <br>
@@ -11,8 +11,7 @@
 <div class="form-body">
     <ul class="nav nav-tabs final-login">
       <h4>Create a free Account</h4>
-        <!-- <li class="active"><a data-toggle="tab" href="#sectionA">Sign In</a></li>
-        <li><a data-toggle="tab" href="#sectionB">Join us!</a></li> -->
+        
     </ul>
     <div class="tab-content">
         <div id="sectionA" class="tab-pane fade in active">
@@ -20,7 +19,7 @@
             <form class="sa-innate-form" method="post">
             <label>Username</label>
             <input type="text" name="username" placeholder="USER-NAME">
-
+          
             <label>Email Id</label>
             <input type="text" name="username" placeholder="EMAIL ID">
 
@@ -30,8 +29,8 @@
             <label>Confirm Password</label>
             <input type="password" name="password" placeholder="CONFIRM PASSWORD">
 
-              <a routerLink="/login"> <button type="submit">Sign up</button></a>
-
+          <a routerLink="/login"> <button type="submit">Sign up</button></a>
+            <!-- <a href="">Forgot Password?</a> -->
             </form>
             </div>
             <div class="social-login">
@@ -70,7 +69,15 @@
     </div>
     </div>
     </div>
-    </div>
+    </div> 
 
 
 
+
+
+
+
+   
+
+
+    
