--- a/src/app/booksdetails/booksdetails.component.html
+++ b/src/app/booksdetails/booksdetails.component.html
@@ -21,7 +21,7 @@
       <div class="box">
         <span class="original">
           <h1>Physics!</h1>
-          <p>Slide up</p>
+          <p></p>
         </span>
         <div class="overlay">
             <button class="price-btn" type="button"> Buy</button>
@@ -34,7 +34,7 @@
       <div class="box">
         <span class="original">
           <h1>Math!</h1>
-          <p>Slide down with icon delay</p>
+          <p></p>
         </span>
         <div class="overlay">
             <button class="price-btn" type="button"> Buy</button>
@@ -50,7 +50,7 @@
       <div class="box">
         <span class="original">
           <h1>oop!</h1>
-          <p>Rotate into view</p>
+          <p></p>
         </span>
         <div class="overlay">
             <button class="price-btn" type="button"> Buy</button>
@@ -63,7 +63,7 @@
       <div class="box">
         <span class="original">
           <h1>English!</h1>
-          <p>Slide in from right and scale</p>
+          <p></p>
         </span>
         <div class="overlay">
             <button class="price-btn" type="button"> Buy</button>
@@ -90,8 +90,8 @@
     <div class="skew four col">
       <div class="box">
         <span class="original">
-          <h1>Hover!</h1>
-          <p>Fade in and skew</p>
+          <h1>BIO!</h1>
+          <p></p>
         </span>
         <div class="overlay">
             <button class="price-btn" type="button"> Buy</button>
@@ -103,7 +103,7 @@
     <div class="corner-bottom four col">
       <div class="box">
         <span class="original">
-          <h1>Hover!</h1>
+          <h1>Computer!</h1>
           <p>Slide in from bottom corner</p>
         </span>
         <div class="overlay">
@@ -116,7 +116,7 @@
     <div class="corner-top four col">
       <div class="box">
         <span class="original">
-          <h1>Hover!</h1>
+          <h1>Math!</h1>
           <p>Slide in from top corner</p>
         </span>
         <div class="overlay">
