--- a/src/app/includes/header/header.component.html
+++ b/src/app/includes/header/header.component.html
@@ -28,10 +28,10 @@
         </div>
         <div class="col-sm-8 col-md-8 col-lg-8 text-sm-center text-right">
           <div class="contact-block-01">
-
+            
             <a class="glyphicon glyphicon-user" routerLink="/signup">Signup</a>
             <a class=" glyphicon glyphicon-log-in" routerLink="/login">Login</a>
-
+        
           </div>
         </div>
       </div>
@@ -43,7 +43,7 @@
         <div class="col-lg-12">
           <a routerLink="/" class="logo">
             <img src="/assets/img/newlogo.PNG" alt="NotesGenie">
-
+            
           </a>
           <div class="main-nav__btn">
             <div class="icon-left"></div>
@@ -85,7 +85,7 @@
               </ul>
             </li> -->
             <li>
-              <a routerLink="/tutor">TUTORS</a>
+              <a href="#">TUTORS</a>
               <ul>
                 <li>
                   <a href="mission.html"></a>
@@ -158,6 +158,9 @@
             </li>
             <li>
               <a routerLink="/books">BOOKS</a>
+            </li>
+            <li>
+              <a routerLink="/"></a>
             </li>
             <li>
               <a href="contacts.html"></a>
